0.1.7 (October 28th, 2009) - Jeff Kreeftmeijer
* fixed a bug in the generator; it copied "loading.gif" to "loading.png". Thanks Eric! 
* two functions in the rakefile were called cssify. One should've been called sassify. fixed :)

0.1.7 (October 27th, 2009) - Jeff Kreeftmeijer
* put the facebox images & icons in a subdir
* created sassify & cssify rake tasks (like the minify one)
* removed the .sass_cache dir and added it to the .gitignore file.

0.1.6 (October 21st, 2009) - Jeff Kreeftmeijer
* fixed a bug that sanitized the output (onsumbit) rather than the input (on paste).

0.1.5 (October 11th, 2009) - Jeff Kreeftmeijer
* fixed a bug that occurred while submitting the form.

0.1.4 (October 5th, 2009) - Jeff Kreeftmeijer
* removed the :paste button, you can now just paste it in the editor. It will work ;)
* added a destroy function for the wysihat_files
* added a locales file to support i18n

0.1.3 (October 5th, 2009) - Jeff Kreeftmeijer
* added sass support

0.1.2 (October 4th, 2009) - Jeff Kreeftmeijer

* added a --no-stylesheet option to the generator
* removed ResourceController as a dependency. Normal controller now :)
* moved more javascript to wysihat_engine.js
* added wysihat_engine_pack.js (all javascripts minfied & concatenated)

0.1.1 (October 3rd, 2009) - Jeff Kreeftmeijer

* Moved most of the javascript to the javascript folder (javascripts/wysihat_engine.js) instead of doing it inline.

0.1.0 (October 3rd, 2009) - Jeff Kreeftmeijer

* Made it a gem.
* Created a generator to get rid of the ugly rake task.
* Removed lots of files (like /public and /config). Everything is in a generator template now.