@@ -11,6 +11,9 @@ div.editor_toolbar
 
 
 .editor_toolbar
+  .button
+    background-image: url('../images/icons/exclamation.png')
+    
   .bold
     background-image: url('../images/icons/text_bold.png')
 
